@@ -13,8 +13,8 @@
 package org.openhab.core.automation.internal.provider.file;
 
 import java.util.Collection;
-import java.util.Collections;
 import java.util.LinkedList;
+import java.util.List;
 import java.util.Locale;
 
 import org.eclipse.jdt.annotation.NonNullByDefault;
@@ -55,7 +55,7 @@ public abstract class TemplateFileProvider extends AbstractFileProvider<RuleTemp
     public Collection<RuleTemplate> getTemplates(@Nullable Locale locale) {
         Collection<RuleTemplate> values = providedObjectsHolder.values();
         if (values.isEmpty()) {
-            return Collections.emptyList();
+            return List.of();
         }
         return new LinkedList<>(values);
     }
