@@ -13,7 +13,6 @@
 package org.openhab.core.io.rest.core.thing;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
@@ -49,7 +48,7 @@ public class EnrichedThingDTOMapper extends ThingDTOMapper {
 
         List<EnrichedChannelDTO> channels = new ArrayList<>();
         for (ChannelDTO channel : thingDTO.channels) {
-            Set<String> linkedItems = linkedItemsMap != null ? linkedItemsMap.get(channel.id) : Collections.emptySet();
+            Set<String> linkedItems = linkedItemsMap != null ? linkedItemsMap.get(channel.id) : Set.of();
             channels.add(new EnrichedChannelDTO(channel, linkedItems));
         }
 
