@@ -13,7 +13,6 @@
 package org.openhab.core.thing.xml.internal;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
@@ -111,7 +110,7 @@ public class ThingTypeConverter extends AbstractDescriptionTypeConverter<ThingTy
     protected List<String> getExtensibleChannelTypeIds(Map<String, String> attributes) {
         String extensible = attributes.get("extensible");
         if (extensible == null) {
-            return Collections.emptyList();
+            return List.of();
         }
 
         return Arrays.stream(extensible.split(",")).map(String::trim).toList();
